# django-mojo

./: .gitignore  404.html  AGENT.md  AI_DEV.md  Agent.md  CHANGELOG.md  CLAUDE.md  LICENSE  PASSKEYS_SIMPLIFIED.md  README.md  TESTING.md  TODO.md  WORKFLOW.md  debug_stream_trim.py  index.html  memory.md  mkdocs.yml  publish.py  pyproject.toml  run_jobs_engine.py  sanity_check.py  sitemap.xml
.claude/: maestro.json
.claude/agents/: docs-updater.md  security-review.md  test-runner.md
.claude/rules/: build-baseline.md  core.md  docs.md  git.md  models.md  performance.md  rest.md  testing.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml
django_developer/: index.html
django_developer/account/: index.html
django_developer/assistant/: index.html
django_developer/chat/: index.html
django_developer/core/: index.html
django_developer/docit/: index.html
django_developer/email/: index.html
django_developer/fileman/: index.html
django_developer/files/: index.html
django_developer/filevault/: index.html
django_developer/jobs/: index.html
docs/: FileMan.md  QRCode.md  README.md  auth.md  cron.md  cron_troubleshooting.md  csv.md  decorators.md  developer_guide.md  device_tracking.md  domain.md  email.md  helpers.md  incident_rule_engine_analysis.md  incident_rule_engine_fixes.md  incident_rule_engine_ui_reference.md  incidents.md  jobs_cli.md  llm_context.md  metrics.md  mojo_models.md  push_notifications_setup.md  realtime.md  realtime_webdev.md  rest.md  rest_developer.md  rule_builder_form.md  tasks.md  testit.md  testit_guide.md
legacy_docs/: async_jobs.md  django_developer.md  email_templates.md  fileman_s3.md  filevault.md  geoip.md  google_address.md  helpers.md  incident_rule_engine_analysis.md  incident_rule_engine_fixes.md  jobs.md  jobs_webhooks.md  kms.md  logging.md  permissions.md  realtime_webdev.md  security-improvements.md  ses_policy.md
mojo/: __init__.py  admin.py  errors.py  urls.py
planning/: .config  _template.md
prompts/: bug_fixer.md  building.md  create_new_ai_project.md  planning.md
scripts/: board.sh  close.sh  intake.sh  ready.sh  start.sh
search/: search_index.json
shim/: README.md  pyproject.toml
shim/django_nativemojo/: __init__.py
testit/: __init__.py  client.py  helpers.py  runner.py
testit_guide/: index.html
tests/: test_metrics_permissions.py
web_developer/: index.html
(+1647 files in other folders)
