[project]
name = "django-mojo"
version = "1.1.8"
description = "A REST framework for Django with secure DB-backed settings, REST/WebSocket support, jobs, auth, and more."
authors = [{ name = "MOJO Dev Team", email = "gotmojo@mojo.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django>=4.2.18,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "faker>=35.2.0,<36.0.0",
    "ujson>=5.10.0,<6.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "pycryptodome>=3.21.0,<4.0.0",
    "pyobjict>=2.1.3,<4.0.0",
    "redis>=7.0.0,<8.0.0",
    "pytz>=2025.1,<2026.0",
    "ua-parser>=1.0.1,<2.0.0",
    "gevent>=25.5.1,<26.0.0",
    "mistune>=3.0.2,<4.0.0",
    "pygments>=2.18.0,<3.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "twilio>=9.8.4,<10.0.0",
    "phonenumberslite>=9.0.17,<10.0.0",
    "qrcode[pil]>=7.4.2,<8.0.0",
    "Pillow>=10.4.0,<11.0.0",
    "cryptography>=46.0.4,<47.0.0",
    "dnspython>=2.8.0,<3.0.0",
    "python-whois>=0.9.6,<0.10.0",
    "pyotp>=2.9.0,<3.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "fido2>=2.1.1",
    "boto3>=1.42.73",
    "pyfcm>=2.1.0",
    "websocket-client>=1.9.0",
    "uvicorn[standard]>=0.42.0",
    "anthropic>=0.52.0",
    "rich>=13.0.0"
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
]

[tool.hatch.build.targets.wheel]
packages = ["mojo", "testit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
