[project]
name = "django-nativemojo"
version = "1.0.60"
description = "Deprecated compatibility package. Use django-mojo instead."
authors = [{ name = "MOJO Dev Team", email = "gotmojo@mojo.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django-mojo>=1.0.60",
]

[tool.hatch.build.targets.wheel]
packages = ["django_nativemojo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
